--- a/index.html
+++ b/index.html
@@ -68,8 +68,10 @@
             <div class="container px-5">
                 <div class="row gx-5 justify-content-center">
                     <div class="col-xl-8">
-                        <div class="h2 fs-1 text-white mb-4">"An intuitive solution to a common problem that we all face, wrapped up in a single app!"</div>
-                        <img src="assets/img/tnw-logo.svg" alt="..." style="height: 3rem" />
+                        <div class="h2 fs-1 text-white mb-4">"Mindscape has helped us to meet tight deadlines and stay within budget."</div>
+                        <a href="https://www.arcanebet.com/en/welcome" target="_blank">
+                            <img src="assets/img/ab-logo.svg" alt="..." style="height: 3rem" />
+                        </a>
                     </div>
                 </div>
             </div>
