--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <title>Mindscape - Helping your product succeed</title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Bootstrap icons-->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
         <!-- Google fonts-->
         <link rel="preconnect" href="https://fonts.gstatic.com" />
         <link href="https://fonts.googleapis.com/css2?family=Newsreader:ital,wght@0,600;1,600&amp;display=swap" rel="stylesheet" />
@@ -76,27 +76,48 @@
                 </div>
             </div>
         </aside>
-        <!-- App features section-->
-        <section id="features">
+        <!-- Services section-->
+        <section id="services">
             <div class="container px-5">
                 <div class="row gx-5 align-items-center">
                     <div class="col-lg-8 order-lg-1 mb-5 mb-lg-0">
                         <div class="container-fluid px-5">
+                            <div class="row mb-5 text-center">
+                                <h2 class="display-4">Our services</h2>
+                            </div>
                             <div class="row gx-5">
                                 <div class="col-md-6 mb-5">
                                     <!-- Feature item-->
                                     <div class="text-center">
-                                        <i class="bi-phone icon-feature text-gradient d-block mb-3"></i>
-                                        <h3 class="font-alt">Device Mockups</h3>
-                                        <p class="text-muted mb-0">Ready to use HTML/CSS device mockups, no Photoshop required!</p>
+                                        <i class="bi-window icon-feature text-gradient d-block mb-3"></i>
+                                        <h4 class="font-alt">Web development</h4>
+                                        <p class="text-muted mb-0">We have expertise in a variety of web development technologies, including but not limited to Node.js, Python, Ruby, React and Vue.</p>
                                     </div>
                                 </div>
                                 <div class="col-md-6 mb-5">
                                     <!-- Feature item-->
                                     <div class="text-center">
-                                        <i class="bi-camera icon-feature text-gradient d-block mb-3"></i>
-                                        <h3 class="font-alt">Flexible Use</h3>
-                                        <p class="text-muted mb-0">Put an image, video, animation, or anything else in the screen!</p>
+                                        <i class="bi-phone icon-feature text-gradient d-block mb-3"></i>
+                                        <h4 class="font-alt">Mobile development</h4>
+                                        <p class="text-muted mb-0">We develop high-quality native mobile apps for iOS and Android, as well as cross-platform solutions using React Native and Flutter.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-6 mb-5">
+                                    <!-- Feature item-->
+                                    <div class="text-center">
+                                        <i class="bi-rocket-takeoff icon-feature text-gradient d-block mb-3"></i>
+                                        <h4 class="font-alt">Rapid prototyping</h4>
+                                        <p class="text-muted mb-0">We can help you turn your idea into a tangible product quickly and efficiently, so you can test it with your target audience and make informed decisions about your next steps.</p>
+                                    </div>
+                                </div>
+                                <div class="col-md-6 mb-5">
+                                    <!-- Feature item-->
+                                    <div class="text-center">
+                                        <i class="bi-box2-heart icon-feature text-gradient d-block mb-3"></i>
+                                        <h4 class="font-alt">Product management</h4>
+                                        <p class="text-muted mb-0">We can provide market research and validation services to help you ensure that your product is meeting the needs of your target audience.</p>
                                     </div>
                                 </div>
                             </div>
@@ -104,17 +125,17 @@
                                 <div class="col-md-6 mb-5 mb-md-0">
                                     <!-- Feature item-->
                                     <div class="text-center">
-                                        <i class="bi-gift icon-feature text-gradient d-block mb-3"></i>
-                                        <h3 class="font-alt">Free to Use</h3>
-                                        <p class="text-muted mb-0">As always, this theme is free to download and use for any purpose!</p>
+                                        <i class="bi-magic icon-feature text-gradient d-block mb-3"></i>
+                                        <h4 class="font-alt">UI/UX design</h4>
+                                        <p class="text-muted mb-0">We can create a user-centered design that makes your product easy to use and visually appealing.</p>
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <!-- Feature item-->
                                     <div class="text-center">
-                                        <i class="bi-patch-check icon-feature text-gradient d-block mb-3"></i>
-                                        <h3 class="font-alt">Open Source</h3>
-                                        <p class="text-muted mb-0">Since this theme is MIT licensed, you can use it commercially!</p>
+                                        <i class="bi-hdd-rack icon-feature text-gradient d-block mb-3"></i>
+                                        <h4 class="font-alt">Infrastructure services</h4>
+                                        <p class="text-muted mb-0">We can help you with platform engineering, DevOps, and SRE services to ensure that your product is reliable, scalable, and secure.</p>
                                     </div>
                                 </div>
                             </div>
@@ -122,30 +143,7 @@
                     </div>
                     <div class="col-lg-4 order-lg-0">
                         <!-- Features section device mockup-->
-                        <div class="features-device-mockup">
-                            <svg class="circle" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
-                                <defs>
-                                    <linearGradient id="circleGradient" gradientTransform="rotate(45)">
-                                        <stop class="gradient-start-color" offset="0%"></stop>
-                                        <stop class="gradient-end-color" offset="100%"></stop>
-                                    </linearGradient>
-                                </defs>
-                                <circle cx="50" cy="50" r="50"></circle></svg
-                            ><svg class="shape-1 d-none d-sm-block" viewBox="0 0 240.83 240.83" xmlns="http://www.w3.org/2000/svg">
-                                <rect x="-32.54" y="78.39" width="305.92" height="84.05" rx="42.03" transform="translate(120.42 -49.88) rotate(45)"></rect>
-                                <rect x="-32.54" y="78.39" width="305.92" height="84.05" rx="42.03" transform="translate(-49.88 120.42) rotate(-45)"></rect></svg
-                            ><svg class="shape-2 d-none d-sm-block" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"><circle cx="50" cy="50" r="50"></circle></svg>
-                            <div class="device-wrapper">
-                                <div class="device" data-device="iPhoneX" data-orientation="portrait" data-color="black">
-                                    <div class="screen bg-black">
-                                        <!-- PUT CONTENTS HERE:-->
-                                        <!-- * * This can be a video, image, or just about anything else.-->
-                                        <!-- * * Set the max width of your media to 100% and the height to-->
-                                        <!-- * * 100% like the demo example below.-->
-                                        <video muted="muted" autoplay="" loop="" style="max-width: 100%; height: 100%"><source src="assets/img/demo-screen.mp4" type="video/mp4" /></video>
-                                    </div>
-                                </div>
-                            </div>
+                        <img class="img-fluid" src="assets/img/services.jpg" alt="..." style="border-radius: 2em;" />
                         </div>
                     </div>
                 </div>
