--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         </div>
                     </div>
                     <div class="col-lg-6">
-                        <img src="assets/img/hero.png" alt="..." style="max-width: 100%; border-radius: 2em" />
+                        <img src="assets/img/hero.jpg" alt="..." style="max-width: 100%; border-radius: 2em" />
                     </div>
                 </div>
             </div>
@@ -149,16 +149,61 @@
                 </div>
             </div>
         </section>
-        <!-- Basic features section-->
-        <section class="bg-light">
+        <!-- Industries section-->
+        <section id="industries" class="bg-light">
             <div class="container px-5">
                 <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
                     <div class="col-12 col-lg-5">
-                        <h2 class="display-4 lh-1 mb-4">Enter a new age of web design</h2>
-                        <p class="lead fw-normal text-muted mb-5 mb-lg-0">This section is perfect for featuring some information about your application, why it was built, the problem it solves, or anything else! There's plenty of space for text here, so don't worry about writing too much.</p>
+                        <h2 class="display-4 lh-1 mb-4">Industries</h2>
+                        <p class="lead fw-normal text-muted mb-5 mb-lg-0">At Mindscape, we have experience working with a wide range of industries, including fintech, SaaS, iGaming, and blockchain. We know that each industry has its own unique needs and challenges, which is why we believe that decades of our accumulated domain knowledge can come as a strong leverage point for our customers.</p>
                     </div>
                     <div class="col-sm-8 col-md-6">
-                        <div class="px-5 px-sm-0"><img class="img-fluid rounded-circle" src="https://source.unsplash.com/u8Jn2rzYIps/900x900" alt="..." /></div>
+                        <div id="industries-carousel" class="carousel slide">
+                            <div class="carousel-indicators">
+                              <button type="button" data-bs-target="#industries-carousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                              <button type="button" data-bs-target="#industries-carousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                              <button type="button" data-bs-target="#industries-carousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                              <button type="button" data-bs-target="#industries-carousel" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                            </div>
+                            <div class="carousel-inner">
+                              <div class="carousel-item active">
+                                <img src="assets/img/industry-finance.jpg" class="d-block w-100 img-industry" alt="...">
+                                <div class="carousel-caption d-none d-md-block">
+                                  <h3>Finance</h3>
+                                  <p>Our team has extensive experience building software solutions for fintech companies, including payment processing and consumer finance. We understand the unique challenges and opportunities that come with these industries, and provide valuable insights and recommendations to help our clients achieve their goals.</p>
+                                </div>
+                              </div>
+                              <div class="carousel-item">
+                                <img src="assets/img/industry-blockchain.jpg" class="d-block w-100 img-industry" alt="...">
+                                <div class="carousel-caption d-none d-md-block">
+                                  <h3>Blockchain</h3>
+                                  <p>We specialize in developing software solutions for the DeFi and blockchain industries. Our team has experience building DeFi lending protocols and crypto payment gateways, and we understand the importance of security, scalability, and usability in these industries.</p>
+                                </div>
+                              </div>
+                              <div class="carousel-item">
+                                <img src="assets/img/industry-igaming.jpg" class="d-block w-100 img-industry" alt="...">
+                                <div class="carousel-caption d-none d-md-block">
+                                  <h3>iGaming</h3>
+                                  <p>We have extensive experience in building products in the iGaming industry. Our team has built custom online casinos and sportsbooks that are compliant with various regulations, and work with multiple odds feeds and game vendors.</p>
+                                </div>
+                              </div>
+                              <div class="carousel-item">
+                                <img src="assets/img/industry-automotive.jpg" class="d-block w-100 img-industry" alt="...">
+                                <div class="carousel-caption d-none d-md-block">
+                                  <h3>Automotive</h3>
+                                  <p>We have experience in building software solutions for the automotive industry. Our team has built a vehicle sales platform that integrates with dealer networks, importers, and OEMs to streamline the vehicle sales process. The platform has been trusted by importers and dealer networks across Europe selling top brands like Mercedes-Benz, Maserati and Jeep.</p>
+                                </div>
+                              </div>
+                            </div>
+                            <button class="carousel-control-prev" type="button" data-bs-target="#industries-carousel" data-bs-slide="prev">
+                              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                              <span class="visually-hidden">Previous</span>
+                            </button>
+                            <button class="carousel-control-next" type="button" data-bs-target="#industries-carousel" data-bs-slide="next">
+                              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                              <span class="visually-hidden">Next</span>
+                            </button>
+                          </div>
                     </div>
                 </div>
             </div>
