Update our company & CTA sections

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <button class="btn btn-primary rounded-pill px-3 mb-2 mb-lg-0" data-bs-toggle="modal" data-bs-target="#contactModal">
                         <span class="d-flex align-items-center">
                             <i class="bi-chat-text-fill me-2"></i>
-                            <span class="small">Get in touch!</span>
+                            <span class="small">Get in touch</span>
                         </span>
                     </button>
                 </div>
@@ -143,7 +143,7 @@
                     </div>
                     <div class="col-lg-4 order-lg-0">
                         <!-- Features section device mockup-->
-                        <img class="img-fluid" src="assets/img/services.jpg" alt="..." style="border-radius: 2em;" />
+                        <img class="img-fluid" src="assets/img/services.jpg" alt="..." style="border-radius: 1em;" />
                         </div>
                     </div>
                 </div>
@@ -208,7 +208,28 @@
                 </div>
             </div>
         </section>
-        <!-- Call to action section-->
+        <!-- Our company section-->
+        <section id="our-company">
+            <div class="container px-5">
+                <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
+                    <div class="col-12 col-lg-6">
+                        <h2 class="display-4 lh-1 mb-4">Our company</h2>
+
+                        <p class="text-muted">At Mindscape, we don't just build features - we care deeply about the success of your product and your team. We take the time to understand the unique challenges that our clients face, and we're here to provide the expertise and support they need to achieve their goals.</p>
+
+                        <p class="text-muted">Our team is made up of highly experienced professionals who are passionate about problem-solving and dedicated to your success. We're driven by a purpose to make a positive impact with technology, and we believe that our work can help make the world a better place.</p>
+
+                        <p class="text-muted">We're always pushing the boundaries of what's possible in technology, and we use the latest AI tools to help us deliver innovative and high-quality solutions to our clients.</p>
+
+                        <p class="text-muted">We know that startups and scale-ups need a different kind of approach when it comes to software development, which is why we hire people who are adaptable, collaborative, passionate, and driven to help your company succeed. We have accumulated decades of experience building software products in a range of industries, including fintech, SaaS, iGaming, blockchain, DeFi, and AI. With Mindscape, you can trust that you have a team of experts who are committed to helping you succeed.</p>
+                    </div>
+                    <div class="col-sm-8 col-md-6">
+                        <img class="img-fluid" src="assets/img/our-company.jpg" alt="..." style="border-radius: 1em;">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- CTA section-->
         <section class="cta">
             <div class="cta-content">
                 <div class="container px-5">
@@ -217,22 +238,14 @@
                         <br />
                         Start building.
                     </h2>
-                    <a class="btn btn-outline-light py-3 px-4 rounded-pill" href="https://startbootstrap.com/theme/new-age" target="_blank">Download for free</a>
-                </div>
-            </div>
-        </section>
-        <!-- App badge section-->
-        <section class="bg-gradient-primary-to-secondary" id="download">
-            <div class="container px-5">
-                <h2 class="text-center text-white font-alt mb-4">Get the app now!</h2>
-                <div class="d-flex flex-column flex-lg-row align-items-center justify-content-center">
-                    <a class="me-lg-3 mb-4 mb-lg-0" href="#!"><img class="app-badge" src="assets/img/google-play-badge.svg" alt="..." /></a>
-                    <a href="#!"><img class="app-badge" src="assets/img/app-store-badge.svg" alt="..." /></a>
+                    <button class="btn btn-outline-light py-3 px-4 rounded-pill" data-bs-toggle="modal" data-bs-target="#contactModal">
+                        Message us
+                    </button>
                 </div>
             </div>
         </section>
         <!-- Footer-->
-        <footer class="bg-black text-center py-5">
+        <footer class="bg-gradient-primary-to-secondary text-center py-5">
             <div class="container px-5">
                 <div class="text-white-50 small">
                     <div class="mb-2">&copy; Your Website 2023. All Rights Reserved.</div>
