--- a/index.html
+++ b/index.html
@@ -257,62 +257,30 @@
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header bg-gradient-primary-to-secondary p-4">
-        <h5 class="modal-title font-alt text-white" id="contactModalLabel">Contact us</h5>
+        <h5 class="modal-title font-alt text-white" id="contactModalLabel">Get in touch</h5>
         <button class="btn-close btn-close-white" type="button" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body border-0 p-4">
-        <!-- * * * * * * * * * * * * * * *-->
-        <!-- * * SB Forms Contact Form * *-->
-        <!-- * * * * * * * * * * * * * * *-->
-        <!-- This form is pre-integrated with SB Forms.-->
-        <!-- To make this form functional, sign up at-->
-        <!-- https://startbootstrap.com/solution/contact-forms-->
-        <!-- to get an API token!-->
-        <form id="contactForm" data-sb-form-api-token="API_TOKEN">
+        <form id="contactForm" action="https://formspree.io/f/moqzrjzq" method="POST">
           <!-- Name input-->
           <div class="form-floating mb-3">
-            <input class="form-control" id="name" type="text" placeholder="Enter your name..." data-sb-validations="required" />
-            <label for="name">Full name</label>
-            <div class="invalid-feedback" data-sb-feedback="name:required">A name is required.</div>
+            <input class="form-control" id="name" name="name" type="text" placeholder="Enter your name..." />
+            <label for="name">Your name</label>
           </div>
           <!-- Email address input-->
           <div class="form-floating mb-3">
-            <input class="form-control" id="email" type="email" placeholder="name@example.com" data-sb-validations="required,email" />
+            <input class="form-control" id="email" name="email" type="email" placeholder="name@example.com" required />
             <label for="email">Email address</label>
-            <div class="invalid-feedback" data-sb-feedback="email:required">An email is required.</div>
-            <div class="invalid-feedback" data-sb-feedback="email:email">Email is not valid.</div>
-          </div>
-          <!-- Phone number input-->
-          <div class="form-floating mb-3">
-            <input class="form-control" id="phone" type="tel" placeholder="(123) 456-7890" data-sb-validations="required" />
-            <label for="phone">Phone number</label>
-            <div class="invalid-feedback" data-sb-feedback="phone:required">A phone number is required.</div>
           </div>
           <!-- Message input-->
           <div class="form-floating mb-3">
-            <textarea class="form-control" id="message" type="text" placeholder="Enter your message here..." style="height: 10rem" data-sb-validations="required"></textarea>
+            <textarea class="form-control" id="message" name="message" type="text" placeholder="Enter your message here..." style="height: 10rem"></textarea>
             <label for="message">Message</label>
-            <div class="invalid-feedback" data-sb-feedback="message:required">A message is required.</div>
           </div>
-          <!-- Submit success message-->
-          <!---->
-          <!-- This is what your users will see when the form-->
-          <!-- has successfully submitted-->
-          <div class="d-none" id="submitSuccessMessage">
-            <div class="text-center mb-3">
-              <div class="fw-bolder">Form submission successful!</div>
-              To activate this form, sign up at
-              <br />
-              <a href="https://startbootstrap.com/solution/contact-forms">https://startbootstrap.com/solution/contact-forms</a>
-            </div>
-          </div>
-          <!-- Submit error message-->
-          <!---->
-          <!-- This is what your users will see when there is-->
-          <!-- an error submitting the form-->
-          <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3">Error sending message!</div></div>
           <!-- Submit Button-->
-          <div class="d-grid"><button class="btn btn-primary rounded-pill btn-lg disabled" id="submitButton" type="submit">Submit</button></div>
+          <div class="d-grid mb-3"><button class="btn btn-primary rounded-pill btn-lg" id="submitButton" type="submit">Submit</button></div>
+          <div id="contact-form-alert" class="alert d-none" role="alert">
+          </div>
         </form>
       </div>
     </div>
@@ -322,5 +290,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 <!-- Core theme JS-->
 <script src="js/scripts.js"></script>
+<script src="js/form-submit.js"></script>
 </body>
 </html>
