Update meta tags

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <meta name="description" content="" />
-  <meta name="author" content="" />
+  <meta name="description" content="Mindscape is a product development partner for startups and scale-ups." />
+  <meta name="author" content="Mindscape" />
   <title>Mindscape - Helping your product succeed</title>
   <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
   <!-- Bootstrap icons-->
@@ -16,6 +16,14 @@
   <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,400;1,400&amp;display=swap" rel="stylesheet" />
   <!-- Core theme CSS (includes Bootstrap)-->
   <link href="css/styles.css" rel="stylesheet" />
+
+  <meta property="og:title" content="Mindscape - Helping your product succeed" />
+  <meta property="og:description" content="Mindscape is a product development partner for startups and scale-ups." />
+  <meta property="og:url" content="https://mindscape.agency" />
+  <meta property="og:type" content="website" />
+
+  <meta name="twitter:title" content="Mindscape - Helping your product succeed" />
+  <meta name="twitter:description" content="Mindscape is a product development partner for startups and scale-ups." />
 </head>
 <body id="page-top">
   <!-- Navigation-->
