--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="description" content="Mindscape is a product development partner for startups and scale-ups." />
   <meta name="author" content="Mindscape" />
-  <title>Mindscape - Helping your product succeed</title>
+  <title>Mindscape Agency - Helping your product succeed</title>
   <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
   <!-- Bootstrap icons-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
